# privastead

./: .dockerignore  .gitignore  ENCRYPTION.md  HOW_TO.md  README.md  SECURITY.md  WHITE_PAPER.md
.github/workflows/: client-lib-tests.yml  linux-deploy-app.yml
app_native/examples/: app.rs
app_native/src/: lib.rs
camera_hub/: Cargo.toml
camera_hub/src/: delivery_monitor.rs  fmp4.rs  livestream.rs  main.rs  notification_target.rs  pairing.rs
camera_hub/src/ip/: ip_camera.rs
camera_hub/src/raspberry_pi/: rpi_camera.rs  rpi_dual_stream.rs
client_lib/: Cargo.toml
client_lib/src/: http_client.rs  mls_client.rs  openmls_rust_persistent_crypto.rs  pairing.rs  tests.rs  thumbnail_meta_info.rs  video.rs
client_server_lib/: Cargo.toml
client_server_lib/src/: auth.rs
config_tool/: Cargo.toml
config_tool/src/: main.rs
deploy/: README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
deploy/src/: app.html
deploy/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
deploy/src-tauri/assets/pi_hub/: Dockerfile  build_image.sh
deploy/src-tauri/assets/server/: provision_server.sh
deploy/src-tauri/capabilities/: dialog.json
deploy/src-tauri/icons/: icon.icns
deploy/src-tauri/src/: lib.rs  main.rs  open_external.rs  release_config.rs  requirements.rs
deploy/src-tauri/src/pi_hub_provision/: build.rs  credentials.rs  docker.rs  events.rs  mod.rs  model.rs  temp.rs
deploy/src-tauri/src/provision_server/: events.rs  harden.rs  mod.rs  preflight.rs  provision.rs  script.rs  ssh.rs  types.rs
deploy/src/lib/: api.ts
deploy/src/lib/components/: AppHeader.svelte
deploy/src/routes/: +layout.svelte  +layout.ts  +page.svelte
deploy/src/routes/hardware-help/: +page.svelte
deploy/src/routes/image/: +page.svelte
deploy/src/routes/ionos-help/: +page.svelte
deploy/src/routes/server-ssh/: +page.svelte
deploy/src/routes/service-account-help/: +page.svelte
deploy/src/routes/settings/: +page.svelte
deploy/src/routes/status/: +page.svelte
motion_ai/cli/: Cargo.toml
motion_ai/cli/src/: main.rs
motion_ai/cli/static/: index.html  styles.css  ui.js
motion_ai/pipeline/: Cargo.toml
motion_ai/pipeline/src/: backend.rs  frame.rs
motion_ai/pipeline/src/logic/: pipeline.rs  stages.rs  telemetry.rs
motion_ai/pipeline/src/ml/: models.rs
releases/: .gitignore  Dockerfile  Dockerfile.deploy  README.md  build.sh  digests.lock.env  sign_macos_release.sh  sign_windows_release.sh  verify_macos_release.sh  verify_windows_release.sh
releases/lib/: common.bash  compare.bash  deploy_helpers.bash  deploy_pipeline.bash  plan.bash  rust_pipeline.bash
releases/lib/docker_deploy/: run_tauri_build.bash  setup_linuxdeploy_plugins.bash
reset/: Cargo.toml
reset/src/: main.rs
server/: Cargo.toml
server/src/: auth.rs  fcm.rs  main.rs  notification_target.rs  unifiedpush.rs
server_backbone/: Cargo.toml
server_backbone/src/: lib.rs
toggle/: Cargo.toml
toggle/src/: main.rs
update/: Cargo.toml
update/scripts/: README.md  secluso_build_bundle.sh  secluso_make_test_bundle.sh  secluso_prepare_release_dir.sh  secluso_sign_checksums.sh  secluso_sign_manifest.sh
update/src/: lib.rs  main.rs
