[package]
name = "secluso-camera-hub"
version = "0.1.0"
edition = "2021"
authors = ["Ardalan Amiri Sani <arrdalan@gmail.com>"]

[features]
default = ["logging"]
logging = ["log"]
ip = ["dep:rpassword", "dep:reqwest", "dep:http-auth", "dep:linfa", "dep:linfa-clustering"]
raspberry = ["dep:secluso-motion-ai"]
telemetry = [] # todo: dep on the motion_ai crate

[dependencies]
docopt = "~1.1"
env_logger = "0.11.8"
log = { version = "0.4.4", optional = true }
serde = "1.0"
serde_derive = "1.0"
rand="0.8"
bincode = "1.2.1"
secluso-client-lib = { path = "../client_lib", features = ["http_client"] }
secluso-client-server-lib = { path = "../client_server_lib" }
chrono = "0.4"
base64 = "0.22.1"
serde-xml-rs = "0.5"
sha1 = "0.10"
qrcode = "0.14.0"
image = "0.25.1"
openmls_traits = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.8.0" }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.8.0" }
retina = "0.4.10"
tokio = { version = "1.5.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
url = "2.2.1"
anyhow = "1.0.41"
bytes = "1.0.1"
futures = "0.3.14"
serde_yaml2 = "0.1.3"
ndarray = { version="0.15.6", features = ["rayon"]} # This has to be 0.15 to support linfa
crossbeam-channel = "0.5.14"
cfg-if = "1.0.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"], optional = true }
serde_json = { version = "1.0" }
regex = "1"

# IP Specific Dependencies
rpassword = {version = "5.0", optional = true }
http-auth = { version = "0.1", optional = true }
linfa = { version = "0.7.1", optional = true }
linfa-clustering = { version = "0.7.1", optional = true }

# Raspberry Specific Dependencies
secluso-motion-ai = { path = "../motion_ai/pipeline", optional = true }
