[package]
name = "secluso-camera-hub"
version = "1.0.0"
edition = "2021"
authors = ["Ardalan Amiri Sani <arrdalan@gmail.com>"]

[features]
default = ["logging"]
logging = ["log"]
ip = ["dep:rpassword", "dep:reqwest", "dep:http-auth", "dep:linfa", "dep:linfa-clustering", "dep:retina", "dep:serde_yaml2", "dep:ndarray", "dep:futures"]
raspberry = ["dep:secluso-motion-ai"]
manual = []
telemetry = [] # todo: dep on the motion_ai crate
test = []

[dependencies]
docopt = "~1.1"
env_logger = "0.11.9"
log = { version = "0.4.29", optional = true }
serde = "1.0"
serde_derive = "1.0"
rand="0.8"
bincode = "1.2.1"
secluso-client-lib = { path = "../client_lib", features = ["http_client"] }
secluso-client-server-lib = { path = "../client_server_lib" }
image = "0.25.10"
openmls = "=0.8.1"
retina = { version = "0.4.19", optional = true }
tokio = { version = "1.50.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
url = "2.5.8"
anyhow = "1.0.102"
bytes = "1.11.1"
futures = { version = "0.3.32", optional = true }
serde_yaml2 = { version = "0.1.3", optional = true }
ndarray = { version = "=0.16.1", features = ["rayon"], optional = true }
crossbeam-channel = "0.5.15"
cfg-if = "1.0.4"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json"], optional = true }
serde_json = { version = "1.0" }

# IP Specific Dependencies
rpassword = {version = "7.4", optional = true }
http-auth = { version = "0.1", optional = true }
linfa = { version = "0.8.1", optional = true }
linfa-clustering = { version = "0.8.1", optional = true }

# Raspberry Specific Dependencies
secluso-motion-ai = { path = "../motion_ai/pipeline", optional = true }
