[package]
name = "secluso-client-lib"
version = "0.1.0"
edition = "2021"
authors = ["Ardalan Amiri Sani <arrdalan@gmail.com>"]

[features]
default = ["logging"]
logging = ["log"]
http_client = ["dep:reqwest", "dep:base64"]

[dependencies]
docopt = "~1.1"
env_logger = "0.11.8"
log = { version = "0.4.4", optional = true }
mio = { version = "0.8", features = ["net", "os-poll"] }
serde = "1.0"
serde_derive = "1.0"
openmls = { git = "https://github.com/openmls/openmls", rev = "openmls-0.7.1" }
ds-lib = { git = "https://github.com/openmls/openmls", rev = "openmls-0.7.1" }
openmls_traits = { git = "https://github.com/openmls/openmls", rev = "openmls-0.7.1" }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls", rev = "openmls-0.7.1" }
openmls_memory_storage = { git = "https://github.com/openmls/openmls", rev = "openmls-0.7.1", features = ["persistence"] }
openmls_basic_credential = { git = "https://github.com/openmls/openmls", rev = "openmls-0.7.1" }
bincode = "1.2.1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "multipart", "rustls-tls"], optional = true }
base64 = { version = "0.22.1", optional = true }
anyhow = "^1.0.64"# Locked to this version due to flutter_rust_bridge usage in app
serde_json = "1.0.140"
rand = "0.8"
qrcode = "0.14.0"
image = "0.25.1"