[package]
name = "secluso-client-lib"
version = "0.1.0"
edition = "2021"
authors = ["Ardalan Amiri Sani <arrdalan@gmail.com>"]

[features]
default = ["logging"]
logging = ["log"]
http_client = ["dep:reqwest", "dep:base64"]

[dependencies]
docopt = "~1.1"
env_logger = "0.11.9"
log = { version = "0.4.29", optional = true }
mio = { version = "0.8", features = ["net", "os-poll"] }
serde = "1.0"
serde_derive = "1.0"
openmls = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.8.0" }
ds-lib = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.8.0" }
openmls_traits = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.8.0" }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.8.0" }
openmls_libcrux_crypto = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.8.0" }
openmls_memory_storage = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.8.0", features = ["persistence"] }
openmls_basic_credential = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.8.0" }
bincode = "1.3.3"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "multipart"], optional = true }
base64 = { version = "0.22.1", optional = true }
base64-url = {version = "3.0.3"}
anyhow = "^1.0.64" # Locked to this version due to flutter_rust_bridge usage in app
serde_json = "1.0.149"
rand = "0.8"
qrcode = "0.14.1"
image = "0.25.10"
