[package]
name = "secluso-client-lib"
version = "1.0.0"
edition = "2021"
authors = ["Ardalan Amiri Sani <arrdalan@gmail.com>"]

[features]
default = ["logging"]
logging = ["log"]
http_client = ["dep:reqwest", "dep:base64"]

[dependencies]
log = { version = "0.4.29", optional = true }
serde = "1.0"
serde_derive = "1.0"
openmls = { version = "=0.8.1"} # test-utils provides us with ds-lib , features = ["test-utils"]
openmls_traits = "=0.5.0"
openmls_rust_crypto = "=0.5.1"
openmls_libcrux_crypto = "=0.3.1"
openmls_memory_storage = { version = "=0.5.0", features = ["persistence"] }
openmls_basic_credential = "=0.5.0"
bincode = "1.3.3"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "multipart", "rustls"], optional = true }
base64 = { version = "0.22.1", optional = true }
base64-url = {version = "3.0.3"}
anyhow = "^1.0.64" # Locked to this version due to flutter_rust_bridge usage in app
serde_json = "1.0.149"
rand = "0.8"
qrcode = "0.14.1"
image = "0.25.10"
