[package]
name = "secluso-config-tool"
version = "0.1.0"
edition = "2021"
authors = ["Ardalan Amiri Sani <arrdalan@gmail.com>"]

[dependencies]
docopt = "~1.1"
serde = "1.0.219"
serde_derive = "1.0.219"
openmls_traits = { git = "https://github.com/openmls/openmls", rev = "openmls-0.7.1" }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls", rev = "openmls-0.7.1" }
rand = "0.8"
url = "2"
secluso-client-server-lib = { path = "../client_server_lib" }
secluso-client-lib = { path = "../client_lib" }
serde_json = "1.0.149"
image = "0.25.1"
anyhow = "1.0.100"
qrcode = "0.14.0"