[package]
name = "secluso-config-tool"
version = "0.1.0"
edition = "2021"
authors = ["Ardalan Amiri Sani <arrdalan@gmail.com>"]

[dependencies]
docopt = "~1.1"
serde = "1.0.228"
serde_derive = "1.0.228"
openmls_traits = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.8.0" }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.8.0" }
rand = "0.8"
url = "2"
secluso-client-server-lib = { path = "../client_server_lib" }
secluso-client-lib = { path = "../client_lib" }
serde_json = "1.0.149"
image = "0.25.10"
anyhow = "1.0.102"
qrcode = "0.14.1"
