[package]
name = "secluso-reset"
version = "0.1.0"
edition = "2021"
authors = ["Ardalan Amiri Sani <arrdalan@gmail.com>"]

[dependencies]
rppal = "0.22.1"
secluso-client-server-lib = { path = "../client_server_lib" }
reqwest = { version = "0.13", default-features = false, features = ["blocking"] }
base64 = { version = "0.22.1" }
