[package]
name = "secluso-server"
version = "0.1.0"
edition = "2021"
authors = ["Ardalan Amiri Sani <arrdalan@gmail.com>"]

[dependencies]
rocket = { version="0.5.1" , features= ["json"] }
base64 = "0.22.1"
secluso-client-server-lib = { path = "../client_server_lib" }
serde = "1.0"
serde_json = "1.0"
jsonwebtoken = "9.3.1"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dashmap = "6.1.0"
subtle = "2.6.1"
time = "0.3.41"
plist = "1.8.0"
anyhow = "1.0.100"