[package]
name = "secluso-update"
version = "0.1.0"
edition = "2021"
authors = ["Ardalan Amiri Sani <arrdalan@gmail.com>"]

[dependencies]
anyhow = "1"
bytes = "1"
docopt = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OpenPGP verification (pure Rust backend).
# We explicitly use Sequoia's RustCrypto backend to avoid system nettle/pkg-config
# dependency chains that break macOS x86_64 cross-builds on Apple Silicon.
sequoia-openpgp = { version = "=2.1.0", default-features = false, features = ["compression", "crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }

# zip + hashing
zip = "2"
sha2 = "0.10"
hex = "0.4"
