# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "secluso-deploy"
version = "0.1.0"
edition = "2021"
authors = ["John Kaczman <jkaczman@pm.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "secluso_deploy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
anyhow = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
secluso-update = { path = "../../update" }

# Keep OpenSSL handling target-specific:

# macOS: vendored OpenSSL avoids host/pkg-config discovery issues when building
# x86_64-apple-darwin on Apple Silicon hosts.

# non-macOS: default ssh2 avoids vendored OpenSSL Windows cross-build failures
# in our Linux cargo-xwin builders.
[target.'cfg(target_os = "macos")'.dependencies]
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
ssh2 = "0.9"
