# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "secluso-deploy"
version = "1.0.1"
edition = "2021"
authors = ["John Kaczman <jkaczman@pm.me>"]
autobins = false
default-run = "Secluso"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "secluso_deploy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Secluso"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
tauri-plugin-dialog = "2.7.0"
anyhow = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "1.1"
base64 = "0.21"
sha2 = "0.10"
secluso-update = { path = "../../update" }
secluso-client-lib = { path = "../../client_lib", features = ["camera_secret_qrcode"] }
secluso-client-server-lib = { path = "../../client_server_lib" }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json"] }
url = "2"
image = "0.25.10"
qrcode = "0.14.1"
base64-url = "3.0.3"
openmls_traits = "=0.5.0"
openmls_rust_crypto = "=0.5.1"
fatfs = "0.3.6"
ssh-key = { version = "0.6", features = ["ed25519", "alloc", "encryption"] }
rand = "0.8"
dirs = "6"


# Keep OpenSSL handling target-specific:
# TODO: replace with russh [https://github.com/Eugeny/russh] to get rid of OpenSSL

# macOS: vendored OpenSSL avoids host/pkg-config discovery issues when building
# x86_64-apple-darwin on Apple Silicon hosts.
[target.'cfg(target_os = "macos")'.dependencies]
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

# WinCNG cannot use Ed25519 / OpenSSH-format keys, which is what key_gen produces, so keyfile auth fails without this
# The Windows cross-build cannot vendor-build OpenSSL (VC-WIN64A's Configure rejects a Linux Perl), so releases/Dockerfile.deploy supplies a hash-pinned prebuilt Windows OpenSSL via the OPENSSL_.. env vars instead.
# We need the openssl-on-win32 feature to make libssh2 use WinCNG.
[target.'cfg(target_os = "windows")'.dependencies]
ssh2 = { version = "0.9", features = ["openssl-on-win32"] }

# linux links system libssl-dev for OpenSSL.
[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
ssh2 = "0.9"
