[package]
name = "secluso-motion-ai"
version = "0.1.0"
edition = "2024"

[features]
mp4_player = ["dep:video-rs"]

[dependencies]
ndarray = { version="0.16.1", features = ["rayon"] }
log = "0.4.26"
yuv = "0.8.6"
serde_json = "1.0.139"
serde = { version = "1.0.219", features = ["derive"] }
tap = "1.0.1"
image = "0.25.5" # Locked version via imageproc
ort = { version = "=2.0.0-rc.10" }
ort-sys = { version = "=2.0.0-rc.10" }
imageproc = "0.25"
rusttype = "0.9" # for text rendering
thiserror = "2.0.11"
rayon = "1.10.0"
serde_bytes = "0.11"
once_cell = "1.21.3"
toml = "0.8.20"
sysinfo = "0.33"
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
anyhow = "1.0.41"
libblur = { version = "0.17.0"}
fast_image_resize = { version = "5.1.2", features = ["rayon"]}
uuid = { version = "1.14.0", features = ["v4"] }
http = "1.2.0"
walkdir = "2.5.0"
tokio = "1.43.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
rocket = { version = "0.5.1", features = ["json"] } #todo: make this feature based
video-rs= { version = "0.10.3", features = ["ndarray"], optional = true }
crossbeam-channel = "0.5.14"
flume = "0.11.1"
include_dir="0.7.4"
