[package]
name = "secluso-motion-ai"
version = "0.1.0"
edition = "2024"

[features]
mp4_player = ["dep:video-rs"]

[dependencies]
ndarray = { version="0.16.1", features = ["rayon"] }
log = "0.4.29"
yuv = "0.8.12"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tap = "1.0.1"
image = "0.25.10" # Locked version via imageproc
ort = { version = "=2.0.0-rc.10" }
ort-sys = { version = "=2.0.0-rc.10" }
imageproc = "0.25"
rusttype = "0.9" # for text rendering
thiserror = "2.0.18"
rayon = "1.11.0"
serde_bytes = "0.11"
once_cell = "1.21.4"
toml = "0.8.23"
sysinfo = "0.33"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
anyhow = "1.0.102"
libblur = { version = "0.17.5"}
fast_image_resize = { version = "5.5.0", features = ["rayon"]}
uuid = { version = "1.22.0", features = ["v4"] }
http = "1.4.0"
walkdir = "2.5.0"
tokio = "1.50.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
rocket = { version = "0.5.1", features = ["json"] } #todo: make this feature based
video-rs= { version = "0.10.5", features = ["ndarray"], optional = true }
crossbeam-channel = "0.5.15"
flume = "0.11.1"
include_dir="0.7.4"
